start.css: make boxtopbot have the same background color as mainarea
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/share/css/start.css
+++ b/share/css/start.css
@@ -38,6 +38,10 @@ p {
    background: #ccc;
 }
 
+.boxtopbot {
+   background: #ccc;
+}
+
 input, textarea {
    font-family:    "Courier New",
 		Courier,
